# SSDD

./: README.md  persistenciaLinks.json  pyproject.toml
config/: blob.config
icedrive_blob/: app.py  blob.py  client.py  delayed_response.py  discovery.py
test/: test_BlobService.py
